--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,56 @@
 .Weather {
+    font-family: arial, sans-serif;
     border: 1px solid #F6F6F6;
+    color: rgb(135, 135, 135);
+    padding: 16px;
+    margin: 30px auto;
+  
+    border-radius: 4 px;
  }
+ .Weather form{
+    margin-bottom: 20px ;
+ }
+ .Weather h1 {
+     font-size: 24px;
+     font-weight: 100;
+     line-height: 29 px;
+     margin: 20px 0 0 0;
+ }
+ .Weather ul {margin:0;
+    padding:0;
+
+
+ }
+ .Weather img{
+    width: 64px;
+    height: 64px;
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 40px;
+
+ }
+ .Weather li{
+    font-size: 16px;
+    font-weight: 100;
+   line-height: 19px;
+   list-style: none;
+ }
+
+.Weather .temperature {
+    font-weight: bold;
+    color: rgb(33, 33, 33);
+    font-size: 64px;
+    line-height: 64px;
+    font-weight: 400;
+  
+}
+.Weather .unit {
+    color: rgb(33, 33, 33);
+    font-weight: 400;
+    font-size: 16px;
+    position:relative;
+    top:-34px;
+    margin-left: 5px;
+    line-height: 1;
+
+}
